# FWI

./: CMakeLists.txt
Forward-CPU/: CMakeLists.txt  acoustic_forward_2d.c  acoustic_forward_2d.h  acoustic_forward_3d.c  acoustic_forward_3d.h  elastic_forward_2d.c  elastic_forward_2d.h  elastic_forward_3d.c  elastic_forward_3d.h
Forward-CPU/Forward-App/: AcSg-Forward.cpp  AcSg-Forward3.cpp  CMakeLists.txt  ElSg-Forward.cpp  ElSg-Forward3.cpp
Include/: fwi.h  fwi_cmd.hpp  fwi_coeff.hpp  fwi_io.hpp  fwi_load_point_source.hpp  fwi_load_source_func.hpp  fwi_memory.hpp  fwi_tool.hpp
Script/Powershell/: AcSg-Forward.ps1
Script/Powershell/AcSg-Forward-Test/: AcSg-Forward.ps1
model/: CMakeLists.txt  circle_shape.cpp  circle_shape.hpp  line_shape.cpp  line_shape.hpp  mdoel_shape.hpp  model.cpp  model.hpp  model_script.cpp  model_script.hpp  rect_shape.cpp  rect_shape.hpp
source/: CMakeLists.txt  decay_source.cpp  decay_source.hpp  ricker_source.cpp  ricker_source.hpp  source.cpp  source.hpp  source_func_op.hpp
tool/: CMakeLists.txt  arg_tool.cpp  arg_tool.hpp
