set(target_name source)
file(GLOB source_list *.hpp *.cpp *.h *.c)
add_library(${target_name} SHARED ${source_list})
target_link_libraries(${target_name} PRIVATE cmd) 
target_compile_definitions(${target_name} PRIVATE DLL_EXPORT)
if(USE_LIB)
    add_library(${target_name}-static STATIC ${source_list})
    target_link_libraries(${target_name}-static PRIVATE  cmd) 
    set_target_properties(${target_name}-static PROPERTIES OUTPUT_NAME ${target_name})
endif(USE_LIB)
target_include_directories(${target_name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})